--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.1
 appnope==0.1.3
+aquirdturtle-collapsible-headings==3.1.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
@@ -58,6 +59,7 @@ packaging==21.3
 pandas==1.4.2
 pandocfilters==1.5.0
 parso==0.8.3
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -65,7 +67,6 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 protobuf==4.21.1
 psutil==5.9.1
-#psycopg2==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
@@ -85,6 +86,7 @@ six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
+statsmodels==0.13.5
 terminado==0.15.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
